Revert "8345259: Disallow ALL-MODULE-PATH without explicit --module-path"
This reverts commit 99d4195812c9f5df580464fd908e1eb3f2bfb8cb.